--- a/src/styles/_module.css
+++ b/src/styles/_module.css
@@ -1,6 +1,7 @@
 :root{
     --font-h1-color: #F45D01;
     --btn-bg: #EEB902;
+    --footer-bg: #F45D01;
 }
 
 main.base-page{
@@ -27,5 +28,38 @@ main.base-page{
             background-color: var(--btn-bg);
             border-radius: .25rem;
         }
+    }
+}
+
+main.image-viewer{
+    display: grid;
+    min-height: 100dvh;
+    grid-template-rows: auto 1fr auto;
+
+    & header{
+        padding: 1rem;
+
+        & h1{
+            text-align: center;
+            color: var(--font-h1-color);
+        }
+    }
+    
+    & section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        & .img-cloudinary{
+            max-width: 100%;
+            aspect-ratio: 16 / 9;
+            overflow: hidden;
+            border-radius: 1rem;
+        }
+    }
+
+    & footer{
+        padding: 1rem;
+        background-color: var(--footer-bg);
     }
 }
