TASK: add menu filters and add comparator

--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -15,16 +15,107 @@ const url = getCldImageUrl({ src: id });
 
 <Layout title="Foto">
 
-    <main class="container image-viewer">
+    <main class="container image-container" data-id={id} >
         <header>
             <h1>Imagen subida</h1>
         </header>
-        <section>
-            <img class="img-cloudinary" src={url} alt="Imagen cloudinary">
+        <section class="image-viewer">
+            <header>
+                <h2>Selecciona el tema</h2>
+            </header>
+            <menu>
+                <button 
+                    type="button"
+                    class="add"
+                    data-topic="ghost"
+                >
+                    Fantasmas
+                </button>
+                <button 
+                    type="button"
+                    class="add"
+                    data-topic="zombie"
+                >
+                    Zombies
+                </button>
+                <button 
+                    type="button"
+                    class="add"
+                    data-topic="devil"
+                >
+                    Diablo
+                </button>
+            </menu>
+            <div class="img-cloudinary" >
+                <two-up>
+                    <img 
+                        id="img-original" 
+                        src={url} 
+                        alt="Imagen cloudinary"
+                    >
+                    <img 
+                        id="img-preview" 
+                        src={url} 
+                        alt="Imagen cloudinary"
+                    >
+                </two-up>
+            </div>
         </section>
         <footer>
             <small>{url}</small>
+            <button 
+                type="button"
+                class="btn-download"
+            >
+                Descargar
+            </button>
         </footer>
     </main>
 
 </Layout>
+
+<script>
+    import { getCldImageUrl } from "astro-cloudinary/helpers";
+    import "two-up-element";
+
+    const id = document.querySelector("main")?.getAttribute("data-id") ?? '';
+    const imagePreview = document.getElementById("img-preview") as HTMLImageElement;
+    const buttons = document.querySelectorAll("button");
+    const btnDownload = document.querySelector('.btn-download') as HTMLButtonElement;
+
+    const TOPICS: Record<string, string> = {
+        ghost: 'Add scary ghosts to the background',
+        zombies: 'Add zombies to the background',
+        devil: 'Add devils to the background',
+        custom: '',
+    } as const;
+
+    buttons.forEach((button) => {
+        const topic = button.getAttribute('data-topic');
+        if(topic == null) return;
+        
+        const url = getCldImageUrl({
+            src: id,
+            replaceBackground: TOPICS[topic],
+        })
+
+        imagePreview.style.opacity = '.3';
+        imagePreview.src = url;
+        imagePreview.onload = () => {
+            imagePreview.style.opacity = '1';
+        }
+    })
+
+    btnDownload.addEventListener("click", (e) =>{
+        const url = getCldImageUrl({
+            src: id,
+            format: 'avif',
+        })
+
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = "image.avif";
+        a.click();
+    })
+
+</script>
