--- a/src/styles/_module.css
+++ b/src/styles/_module.css
@@ -31,13 +31,13 @@ main.base-page{
     }
 }
 
-main.image-viewer{
+main.image-container{
     display: grid;
     min-height: 100dvh;
     grid-template-rows: auto 1fr auto;
 
     & header{
-        padding: 1rem;
+        padding: 0.5rem;
 
         & h1{
             text-align: center;
@@ -45,16 +45,38 @@ main.image-viewer{
         }
     }
     
-    & section{
+    & section.image-viewer{
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        row-gap: 0.5rem;
+        padding: 1rem;
+
+        & menu{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-around;
+
+            & button{
+                padding: 1rem;
+                background-color: var(--btn-bg);
+                border-radius: .25rem;
+            }
+
+        }
     
         & .img-cloudinary{
-            max-width: 100%;
             aspect-ratio: 16 / 9;
             overflow: hidden;
             border-radius: 1rem;
+            
+            & img{
+                max-width: 100%;
+                transition: opacity 0.3s ease;
+            }
         }
     }
 
