--- a/src/styles/_module.css
+++ b/src/styles/_module.css
@@ -85,3 +85,10 @@ main.image-container{
         background-color: var(--footer-bg);
     }
 }
+
+ul{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    list-style: none;
+}
