--- a/src/styles/_module.css
+++ b/src/styles/_module.css
@@ -1,5 +1,6 @@
 :root{
     --font-h1-color: #F45D01;
+    --font-h2-color: #FFF;
     --btn-bg: #EEB902;
     --btn-bg-hover: #f0ce59;
     --footer-bg: #F45D01;
@@ -102,7 +103,7 @@ main.base-page{
     }
 }
 
-main.image-container{
+article.image-container{
     display: grid;
     min-height: 100dvh;
     grid-template-rows: auto 1fr auto;
@@ -112,47 +113,113 @@ main.image-container{
 
         & h1{
             text-align: center;
+            font-size: 1.8rem;
             color: var(--font-h1-color);
         }
     }
     
     & section.image-viewer{
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
         row-gap: 0.5rem;
-        padding: 1rem;
 
-        & menu{
+        & .section-title {
+            text-align: center;
+            font-size: 1.5rem;
+            color: #ffffff;
+
+            & h2{
+                color: var(--font-h2-color);
+            }
+        }
+
+        & menu.theme-buttons{
             width: 100%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
-
-            & button{
-                padding: 1rem;
+            gap: 1.5rem;
+            
+            & .btn-topic {
                 background-color: var(--btn-bg);
+                border: none;
+                color: #1e1e1e;
+                padding: 0.75rem 1.5rem;
+                font-size: 1rem;
+                font-weight: bold;
                 border-radius: .25rem;
+                cursor: pointer;
+                transition: transform 0.2s, background-color 0.3s;
+                
+                &:hover {
+                  background-color: var(--btn-bg-hover);
+                  transform: scale(1.1);
+                }
             }
-
         }
     
         & .img-cloudinary{
-            aspect-ratio: 16 / 9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            aspect-ratio: 4 / 3;
             overflow: hidden;
             border-radius: 1rem;
+            
+            two-up {
+                width: 100%;
+                max-width: 800px;
+                height: auto;
+                border: 2px solid #444;
+                border-radius: 10px;
+                overflow: hidden;
+            }
             
             & img{
                 max-width: 100%;
                 transition: opacity 0.3s ease;
             }
         }
-    }
 
-    & footer{
-        background-color: var(--footer-bg);
+        & footer{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: .5rem;
+            background-color: var(--footer-bg);
+            font-size: 0.9rem;
+    
+            & .btn-download {
+                background-color: var(--btn-bg);
+                border: none;
+                padding: 0.5rem 1rem;
+                border-radius: 5px;
+                font-size: 1rem;
+                color: #1e1e1e;
+                cursor: pointer;
+                transition: background-color 0.3s;
+                
+                &:hover {
+                    background-color: var(--btn-bg-hover);
+                }
+            }
+        }
+    }
+}
+
+.btn-back-to-home{
+    width: max-content;
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    
+    & button{
+        background-color: #0000;
+        color: var(--font-h1-color);
     }
 }
 
